# tofa

./: .gitignore  .release-please-manifest.json  AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tofa-export-2026-05-01.json
.github/workflows/: bump-tofa-core-dep.yml  ci.yml  docs.yml  landing-deploy.yml  landing.yml  publish-crates.yml  release-please.yml  release.yml
assets/: generate-icon.sh
demo-video/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
demo-video/scripts/: cut-rush.mjs
demo-video/src/: Root.tsx
demo-video/src/components/: BrandCard.tsx  Callout.tsx  TitleCard.tsx  ZoomLayer.tsx
demo-video/src/compositions/: MacApp.tsx  Tour.tsx
demo-video/src/theme/: tokens.ts
docs/: demo-cli.tape  demo-tour.tape
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md  security.md
docs/design/: tofa-design-system.html
docs/specs/: 2026-05-03-design-system-application-design.md
docs/superpowers/plans/: 2026-04-30-cli.md  2026-04-30-rotp-visual-redesign.md  2026-04-30-rotp.md  2026-05-01-distribution-aur.md  2026-05-01-distribution-cicd.md  2026-05-01-distribution-homebrew.md  2026-05-01-tauri-menubar.md  2026-05-01-tofa-main-page-redesign.md
docs/superpowers/specs/: 2026-04-30-cli-design.md  2026-04-30-rotp-design.md  2026-04-30-rotp-visual-redesign.md  2026-05-01-distribution-design.md  2026-05-01-tauri-menubar-design.md  2026-05-01-tofa-main-page-redesign.md  2026-05-03-multi-import-design.md
homebrew-tap/Casks/: tofa.rb
homebrew-tap/Formula/: tofa.rb
landing/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  astro.config.mjs  lighthouserc.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json  vitest.config.ts
landing/public/: robots.txt
landing/scripts/: build-og.mjs  deploy.sh  extract-posters.sh  og.html
landing/tests/: CopyButton.test.tsx  DemoGallery.test.tsx  FAQ.test.tsx  ThemeToggle.test.tsx  setup.ts
packaging/macos/: Info.plist.template  tofa-launcher
rotp/: Cargo.toml  build.rs
rotp-core/: Cargo.toml
rotp-core/src/: crypto.rs  lib.rs  qr.rs  store.rs  totp.rs
rotp-core/tests/: crypto_test.rs  qr_test.rs  store_test.rs  totp_test.rs
rotp/src/: cli.rs  main.rs
rotp/src/cli/: mod.rs
rotp/src/cli/commands/: add.rs  code.rs  completions.rs  destroy.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  qr.rs  rekey.rs  remove.rs  rename.rs
rotp/src/tui/: mod.rs  state.rs  theme.rs
rotp/src/tui/screens/: add_form.rs  add_name.rs  delete_confirm.rs  export.rs  export_qr.rs  file_picker.rs  fullscreen.rs  list.rs  mod.rs  otp_detail.rs  scanning_qr.rs  unlock.rs
rotp/tests/: cli_add.rs  cli_code.rs  cli_completions.rs  cli_destroy.rs  cli_export.rs  cli_import.rs  cli_init.rs  cli_list.rs  cli_qr.rs  cli_rekey.rs  cli_remove.rs  cli_rename.rs  tui_state_test.rs
scripts/: gen-icons.sh  install-hooks.sh  install.sh  pre-commit  publish-aur.sh
tofa/: CHANGELOG.md  Cargo.toml
tofa-app/packaging/: .smoke-test.sh  generate.sh
tofa-app/src/: index.html  main.js  style.css
tofa-app/src-tauri/: CHANGELOG.md  Cargo.toml  Info.plist  build.rs  tauri.conf.json
tofa-app/src-tauri/capabilities/: default.json
tofa-app/src-tauri/icons/: dmg_icon.icns  icon.icns
tofa-app/src-tauri/src/: about_window.rs  cam.html  commands.rs  lib.rs  main.rs  state.rs  updater.rs
tofa-app/src-tauri/ui/: about.html  index.html
tofa-app/src-tauri/ui/assets/css/: app.css  styles.css  tokens.css
tofa-app/src-tauri/ui/assets/fonts/: fonts.css
tofa-app/src-tauri/ui/js/: app.js  issuer-icons.js  otp.js
tofa-app/tests/: unlock-button.test.mjs
tofa-core/: CHANGELOG.md  Cargo.toml
tofa-core/fixtures/: aegis-fake.json
tofa-core/src/: crypto.rs  lib.rs  qr.rs  store.rs  totp.rs
tofa-core/src/import/: aegis.rs  andotp.rs  bitwarden.rs  ente.rs  freeotp.rs  google_authenticator.rs  keepassxc.rs  mod.rs  native.rs  raivo.rs  twofas.rs
tofa-core/tests/: aegis_import.rs  andotp_import.rs  bitwarden_import.rs  crypto_test.rs  demo_migration.rs  ente_import.rs  freeotp_import.rs  gen_fixtures.rs  google_authenticator_import.rs  import_dispatch.rs  keepassxc_import.rs  migration_roundtrip.rs  otpauth_roundtrip.rs  qr_parsing.rs  qr_test.rs  raivo_import.rs  scan_dense_grid.rs  selection_export.rs  store_test.rs  totp_test.rs  twofas_import.rs
tofa-core/tests/fixtures/aegis/: aegis-fake.json
tofa-core/tests/fixtures/andotp/: andotp-fake.json
tofa-core/tests/fixtures/bitwarden/: bitwarden-fake.json
tofa-core/tests/fixtures/ente/: ente-fake.txt
tofa-core/tests/fixtures/freeotp/: freeotp-fake.json
tofa-core/tests/fixtures/keepassxc/: keepassxc-fake.csv
tofa-core/tests/fixtures/raivo/: raivo-fake.json
tofa-core/tests/fixtures/twofas/: twofas-fake.2fas
tofa-theme/: Cargo.toml
tofa-theme/src/: ansi.rs  lib.rs  palette.rs  theme.rs  voice.rs  wink.rs
tofa-theme/src/widgets/: account_list.rs  badge.rs  mod.rs  otp_display.rs  search_bar.rs  toast.rs  unlock_prompt.rs
tofa/src/: lib.rs  main.rs
tofa/src/cli/: mod.rs
tofa/src/cli/commands/: add.rs  cam.rs  code.rs  completions.rs  destroy.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  qr.rs  rekey.rs  remove.rs  rename.rs  scan.rs
tofa/src/theme/: ansi.rs  mod.rs  mode.rs  theme.rs
tofa/src/theme/widgets/: account_list.rs  badge.rs  otp_display.rs  search_bar.rs  toast.rs  unlock_prompt.rs
tofa/src/tui/: mod.rs  state.rs  theme.rs
tofa/src/tui/screens/: add_form.rs  add_name.rs  delete_confirm.rs  export.rs  export_otpauth_list.rs  export_qr.rs  export_uri_list.rs  file_picker.rs  fullscreen.rs  list.rs  mod.rs  otp_detail.rs  scanning_qr.rs  toast.rs  unlock.rs
tofa/tests/: cli_add.rs  cli_code.rs  cli_completions.rs  cli_destroy.rs  cli_export.rs  cli_import.rs  cli_init.rs  cli_list.rs  cli_qr.rs  cli_rekey.rs  cli_remove.rs  cli_rename.rs  scan_import.rs  tui_state_test.rs
tofa/tofa/: CHANGELOG.md
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  render.rs
xtask/tests/: integration.rs
(+64 files in other folders)
