[package]
name = "rotp-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core library for rotp — encrypted TOTP vault"
repository = "https://github.com/carlo/rotp"

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
totp-rs = { version = "5", features = ["gen_secret"] }
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
