[package]
name = "tofa-core"
version = "0.11.8"
edition = "2021"
license = "MIT"
description = "Core library for tofa — encrypted TOTP vault"
repository = "https://github.com/stratif-io/tofa"
homepage = "https://github.com/stratif-io/tofa"
keywords = ["totp", "otp", "vault", "encryption", "2fa"]
categories = ["authentication", "cryptography"]

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
totp-rs = { version = "5", features = ["gen_secret"] }
rqrr = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
thiserror = "1"
base64 = "0.22"
data-encoding = "2"
qrcode = { version = "0.14.1", features = ["image"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
