[package]
name = "tofa"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Eye-candy terminal OTP manager"
repository = "https://github.com/cabichahine/tofa"
homepage = "https://github.com/cabichahine/tofa"
keywords = ["otp", "totp", "tui", "security", "terminal"]
categories = ["command-line-utilities"]

[lib]
name = "tofa"
path = "src/lib.rs"

[[bin]]
name = "tofa"
path = "src/main.rs"

[dependencies]
tofa-core = { path = "../tofa-core" }
unicode-width = "0.1"
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rpassword = "7"
arboard = "3"
thiserror = "1"
dirs = "5"
chrono = "0.4"
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
tui-big-text = "0.6"

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
