[package]
name = "tofa-app"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "Tofa"
path = "src/main.rs"

[lib]
name = "tofa_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tofa-core = { path = "../../tofa-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
dirs = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSEvent"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

